adminpage, report n staffpage update

--- a/src/app/adminpage/adminpage.component.html
+++ b/src/app/adminpage/adminpage.component.html
@@ -2,8 +2,8 @@
     <nav class="header" style="height: 85px;">
         <div id="logo-text">
             <a>
-                <img src="../../../assets/images/tut.png" alt="SMART FARM" style="float: left;height: 72px;width: 250px; 
-                    height: 75px;margin-top: 5px;" routerLink="read">
+                <img class="logo" src="../../../assets/images/tut.png" alt="SMART FARM"
+                style="float: left;height: 70px;width: 225px;" routerLink="read" />
             </a>
         </div>
         <div id="menu-icon">
@@ -46,11 +46,11 @@
 
         </li> -->
 
-        <li class="nav-item" role="presentation" id="doing-tab3">
+        <!-- <li class="nav-item" role="presentation" id="doing-tab3">
             <a class="nav-link colorAmber" id="progress-tab" data-bs-toggle="tab" data-bs-target="#progress" type="text"
                 role="tab" aria-controls="progress" aria-selected="false"><br><a><b>LOGS</b></a></a>
 
-        </li>
+        </li> -->
 
         <li class="nav-item" role="presentation">
             <a class="nav-link colorAmber" data-bs-toggle="tab" type="text" role="tab" aria-selected="false"
