--- a/src/app/adminpage/adminpage.component.css
+++ b/src/app/adminpage/adminpage.component.css
@@ -7,6 +7,13 @@
   flex:1;
 }
 
+#logo-text{
+
+  margin-left: 5%;
+  margin-top: 7.2px;
+
+}
+
 .tab-content {
     float: right;
     width: 1500%;
@@ -28,9 +35,7 @@
   left: 2px;
   float: left;
   width: 100%;
-  
-  
-   font-family: "Times New Roman";
+  font-family: "Times New Roman";
   font-style: normal;
   font-weight: 400;
   font-size: 22px;
@@ -43,12 +48,8 @@
   
   background: rgba(255, 255, 255, 0.8);
  
-  
-  
   }
 
-  
-  
   .nav-item{
     padding: 8px 24px;
     
@@ -70,7 +71,6 @@
    
   }
   
-  
   .nav-link.active {
     border: none;
   }
@@ -80,16 +80,12 @@
       border: 2px solid rgb(255, 255, 255);
       background-color: #ECE7E7; 
       font-weight: bold;
-  
-  
-  
-  
-  font-family: 'Sansation';
-  font-style: normal;
-  font-weight: 700;
-  font-size: 32px;
-  line-height: 36px;
-  letter-spacing: 0.15em;
+      font-family: 'Sansation';
+      font-style: normal;
+      font-weight: 700;
+      font-size: 32px;
+      line-height: 36px;
+      letter-spacing: 0.15em;
   
   color: #000000;
   }
@@ -99,16 +95,12 @@
     border: 2px solid rgb(255, 255, 255);
     background-color: #ECE7E7; 
     font-weight: bold;
-  
-  
-  
-  
-  font-family: 'Sansation';
-  font-style: normal;
-  font-weight: 700;
-  font-size: 32px;
-  line-height: 36px;
-  letter-spacing: 0.15em;
+    font-family: 'Sansation';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 36px;
+    letter-spacing: 0.15em;
   
   color: #000000;
   }
@@ -116,7 +108,7 @@
   
   
   /*Footer*/
-  
+
   footer{
     background: black;
     padding: 8px;
@@ -182,8 +174,6 @@
     align-items: center;
   }
   
-  
-  
   /* Dropdown Button */
   .dropbtn {
     background-color: #04AA6D;
@@ -246,7 +236,6 @@
     margin-bottom: 1rem;
   }
   
-  
   form .div #reqhead{
     position: absolute;
   width: 271px;
@@ -306,16 +295,12 @@ border-radius: 10px;
 box-shadow: 0 7px 25px 0 rgba(0, 0, 0, 0.8)
 }
 
-
-
-
 .request{
     border: 2.5px solid #ccc;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2);
     padding: 15px;
 }
  
-
 .sideNav {
   float: left;
   
@@ -374,7 +359,6 @@ a {
  
 }
   
-
 .nav-item{
     padding: 8px 24px;
     
@@ -394,7 +378,6 @@ a {
     
     
   }
-  
   
   .nav-link.active {
     border: none;
