--- a/src/app/report/report.component.css
+++ b/src/app/report/report.component.css
@@ -39,8 +39,13 @@ transform: translateY(-50%);
     border-left: 8px solid rgb(14, 60, 90);
    
   }
+  #logo-text{
+
+    margin-left: 5%;
+    margin-top: 7.2px;
   
-  
+  }
+
   .nav-link.active {
     border: none;
   }
@@ -51,16 +56,13 @@ transform: translateY(-50%);
       border: 2px solid rgb(255, 255, 255);
       background-color: #ECE7E7; 
       font-weight: bold;
-  
-  
-  
-  
-  font-family: 'Sansation';
-  font-style: normal;
-  font-weight: 700;
-  font-size: 32px;
-  line-height: 36px;
-  letter-spacing: 0.15em;
+      text-align: center;
+      font-family: 'Sansation';
+      font-style: normal;
+      font-weight: 700;
+      font-size: 32px;
+      line-height: 36px;
+      letter-spacing: 0.15em;
   
   color: #000000;
   }
@@ -70,16 +72,12 @@ transform: translateY(-50%);
     border: 2px solid rgb(255, 255, 255);
     background-color: #ECE7E7; 
     font-weight: bold;
-  
-  
-  
-  
-  font-family: 'Sansation';
-  font-style: normal;
-  font-weight: 700;
-  font-size: 32px;
-  line-height: 36px;
-  letter-spacing: 0.15em;
+    font-family: 'Sansation';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 36px;
+    letter-spacing: 0.15em;
   
   color: #000000;
   }
@@ -93,11 +91,11 @@ transform: translateY(-50%);
       padding: 8px;
       color: #eee;
       display: center;
-     
+      text-align: center;
       position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 2.5rem;
+      bottom: 0;
+      width: 100%;
+      height: 2.5rem;
   }
   
  
