--- a/src/app/report/report.component.html
+++ b/src/app/report/report.component.html
@@ -4,8 +4,8 @@
         <nav class="header" style="height: 85px;">
             <div id="logo-text" >
                 <a>
-                    <img src="../../../assets/images/tut.png" alt="SMART FARM" style="float: left;height: 72px;width: 250px; 
-                    height: 75px;margin-top: 5px;" routerLink="read">
+                    <img class="logo" src="../../../assets/images/tut.png" alt="SMART FARM"
+                    style="float: left;height: 70px;width: 225px;" routerLink="read" />
                 </a>
             </div>
             <div id="menu-icon">
@@ -31,7 +31,7 @@
 <div class="container">
     <br>
     <br>
-    <div class="reqhead1">REPORT</div>
+    <div class="reqhead1" >REPORT</div>
     <br>
     <br>
 <div class="Search-container">
