--- a/src/app/staffpage/staffpage.component.css
+++ b/src/app/staffpage/staffpage.component.css
@@ -16,10 +16,7 @@ border-right: 5px solid #0e0f52;
     border: 2px solid rgb(255, 255, 255);
     background-color: #ECE7E7; 
     font-weight: bold;
-
-
-
-
+    text-align: center;
 font-family: 'Sansation';
 font-style: normal;
 font-weight: 700;
@@ -35,18 +32,13 @@ color: #000000;
   border: 2px solid rgb(255, 255, 255);
   background-color: #ECE7E7; 
   font-weight: bold;
-
-
-
-
-font-family: 'Sansation';
-font-style: normal;
-font-weight: 700;
-font-size: 32px;
-line-height: 36px;
-letter-spacing: 0.15em;
-
-color: #000000;
+  font-family: 'Sansation';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 36px;
+  letter-spacing: 0.15em;
+  color: #000000;
 }
 
 
@@ -180,7 +172,9 @@ cursor: pointer;
 
 
 }
-
+.btn{
+  text-align: center;
+}
 
 
 
