add tech update

--- a/src/app/admin/admin.component.css
+++ b/src/app/admin/admin.component.css
@@ -18,6 +18,12 @@
 #menu-toggle {
     display: none;
 }
+#logoDiv{
+  
+    margin-left: 5%;
+    margin-top: 7.2px;
+  
+  }
 
 .sidebar {
     position: fixed;
