--- a/src/app/admindashboard/admindashboard.component.html
+++ b/src/app/admindashboard/admindashboard.component.html
@@ -17,7 +17,7 @@
                     <li>
         
                         <a href="#" class="nav-link active" id="ModalExample" (click)="logout()"><button type="button"
-                                class="btn btn-success">LOGOUT</button></a>
+                                class="btn ">LOGOUT</button></a>
                     </li>
                 </ul>
         
@@ -31,8 +31,10 @@
             <nav class="breadcrumbNav">
                 <ul>
                     <li class = "" id = "breadcrumbpadding"><a class ="" id="hover" href="#"   routerLink="/adminpage">View Logs</a></li>
-                    <!-- <li class = "" id = "breadcrumbpadding"><a class ="" id="hover" href="#"   routerLink="/adminprogress">View Progress</a></li>
-                    <li class = "" id = "breadcrumbpadding"><a class ="" id="hover" href="#"   routerLink="/admincloselog">Close Logs</a></li> -->
+                    <li class="" id="breadcrumbpadding"><a class="" id="hover" href="#" routerLink="/newArtisan">Create new artisan</a></li>
+              
+                  <li class = "" id = "breadcrumbpadding"><a class ="" id="hover" href="#"   routerLink="/adminprogress">View Progress</a></li>
+                      <!-- <li class = "" id = "breadcrumbpadding"><a class ="" id="hover" href="#"   routerLink="/admincloselog">Close Logs</a></li> -->
                     
                         <div class="dropdown">
                             <button class="dropbtn">Report</button>
