--- a/src/app/adminassigntask/adminassigntask.component.html
+++ b/src/app/adminassigntask/adminassigntask.component.html
@@ -16,7 +16,7 @@
                 <li>
 
                     <a href="#" class="nav-link active" id="ModalExample" (click)="logout()"><button type="button"
-                            class="btn btn-success">LOGOUT</button></a>
+                            class="btn ">LOGOUT</button></a>
                 </li>
             </ul>
 
