--- a/src/app/admindashboard/admindashboard.component.css
+++ b/src/app/admindashboard/admindashboard.component.css
@@ -35,7 +35,7 @@ body {
   }
   #logoDiv{
   
-    margin-left: 1%;
+    margin-left: 5%;
     margin-top: 7.2px;
   
   }
@@ -43,16 +43,20 @@ body {
     color: white;
     font-weight: 500;
     margin-top: 1.6%;
-    margin-right: 25%;
+   padding-right: 25%;
   }
   /*logout button*/
-  .btn-success{
-    color: white;
-    border: 2px solid white;
-    height: 40px;
-    background-color: #005596;
+ .btn{
+  background-color:#eceef3 ;
+  border-radius: 5px;
+  height:50px;
+  color: black;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  font-weight: bold;
   }
-  .btn-success:active{
+.btn-success:active{
     border: white;
     background-color: #005596;
   }
