--- a/src/app/adminprogress/adminprogress.component.html
+++ b/src/app/adminprogress/adminprogress.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="topNav">
     <!-- <body class="container"> -->
         <div class="log d-flex justify-content-end">
             <nav class="header">
@@ -16,7 +16,7 @@
                     <li>
         
                         <a href="#" class="nav-link active" id="ModalExample" (click)="logout()"><button type="button"
-                                class="btn btn-success">LOGOUT</button></a>
+                                class="btn ">LOGOUT</button></a>
                     </li>
                 </ul>
         
