--- a/src/app/closelog/closelog.component.css
+++ b/src/app/closelog/closelog.component.css
@@ -83,7 +83,17 @@ transform: translateY(-50%);
   
   color: #000000;
   }
+  .btn{
+    background-color:#eceef3 ;
   
+    border-radius: 5px;
+    height:50px;
+    color: black;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    font-weight: bold;
+  }
   
   
   /*Footer*/
