--- a/src/app/closelog/closelog.component.html
+++ b/src/app/closelog/closelog.component.html
@@ -47,7 +47,7 @@
                     <ul>
                     <li>
                       <a href="#" class="nav-link active" id="ModalExample" >
-                        <button type="button" class="btn btn-success">LOGOUT</button>
+                        <button type="button" class="btn ">LOGOUT</button>
                       </a>
                     </li>
                   </ul>
