--- a/src/app/create-new-artisan/create-new-artisan.component.html
+++ b/src/app/create-new-artisan/create-new-artisan.component.html
@@ -16,7 +16,7 @@
                 <li>
 
                     <a href="#" class="nav-link active" id="ModalExample" (click)="logout()"><button type="button"
-                            class="btn btn-success">LOGOUT</button></a>
+                            class="btn ">LOGOUT</button></a>
                 </li>
             </ul>
         </nav>
@@ -126,12 +126,12 @@
                 <span aria-hidden="true">&times;</span>
               </button>
             </div>
-            <div class="modal-body"  class="alert alert-success" role="alert">
-                <strong>{{message}}</strong>
+            <div class="modal-body" *ngIf="boolmsg" class="alert alert-success" role="alert">
+                <strong>{{successmsg}}</strong>
             </div>
             <div class="modal-footer" >
               <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> -->
-              <button type="button" class="btn btn-primary" (click)="doSomething()"  routerLink="/trackrequest" id="close">OK</button>
+              <button type="button" class="btn btn-primary" (click)="doSomething()"   id="close">OK</button>
             </div>
           </div>
         </div>
