added a tech table

--- a/src/app/adminpage/adminpage.component.html
+++ b/src/app/adminpage/adminpage.component.html
@@ -35,6 +35,7 @@
                     <li class = "" id = "breadcrumbpadding"><a class ="" id="hover" href="#"   routerLink="/admincloselog">Close Logs</a></li>
                     <li class="" id="breadcrumbpaddingreport"><a class="" id="hover" href="#" routerLink="/generatereport">Generate Report</a></li>
                     <li class="" id="breadcrumbpadding"><a class="" id="hover" href="#" routerLink="/newArtisan">Create new artisan</a></li>
+                    <li class="" id="breadcrumbpadding"><a class="" id="hover" href="#" routerLink="/Tech-table">Technician table</a></li>
 
                     
                         
