--- a/src/app/adminpage/adminpage.component.html
+++ b/src/app/adminpage/adminpage.component.html
@@ -40,15 +40,14 @@
                 role="tab" aria-controls="doing" aria-selected="true">
                <br><a><b>REQUESTS</b></a></a>
         </li>
-        <!-- <li class="nav-item" role="presentation" id="doing-tab2">
-            <a class="nav-link colorAmber" id="done-tab" data-bs-toggle="tab" data-bs-target="#done" type="text"
-                role="tab" aria-controls="done" aria-selected="false"><br><a><b>VIEW PROGRESS</b></a></a>
-
-        </li> -->
+        <li class="nav-item" role="presentation">
+            <a class="nav-link colorAmber" id="done-tab" data-bs-toggle="tab" type="text" role="tab" aria-selected="false"
+                routerLink="/adminprogress"><br><a><b>VIEW PROGRESS</b></a></a>
+        </li>
 
         <!-- <li class="nav-item" role="presentation" id="doing-tab3">
             <a class="nav-link colorAmber" id="progress-tab" data-bs-toggle="tab" data-bs-target="#progress" type="text"
-                role="tab" aria-controls="progress" aria-selected="false"><br><a><b>LOGS</b></a></a>
+                role="tab" aria-controls="progress" aria-selected="false"><br><a><b>View LOGS</b></a></a>
 
         </li> -->
 
