--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -26,7 +26,7 @@
 </div>
 
 <!-- Modal -->
-<div class="modal fade" id="adminPop" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+<div class="modal fade" id="adminPop" [ngClass]="{ 'show': showModal }" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content">
         <div class="modal-header">
@@ -36,7 +36,9 @@
           </button>
         </div>
         <div class="modal-body"  class="alert alert-success" role="alert">
-            <strong>message</strong>
+            	<h3 >id:{{id}} </h3>
+				<h3 >category:{{category}} </h3>
+				<h3 >description:{{description}} </h3>
         </div>
         <div class="modal-footer" >
           <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> -->
@@ -67,7 +69,7 @@
 		<!-- body -->
 		<div class="main">
 
-	
+			
 
 			<div class="box-container">
 
@@ -136,6 +138,13 @@
 					</div>
 				</div>
 			</div>
+			<span>
+				<h2>Message</h2>
+				<h3 >id:{{id}} </h3>
+				<h3 >category:{{category}} </h3>
+				<h3 >description:{{description}} </h3>
+				<button >Get Message</button>
+			</span>
 
 			<!--Bottom part/UNDER THE TICKETS  -->
 			<div class="report-container">
