--- a/src/app/stafffeedback/stafffeedback.component.css
+++ b/src/app/stafffeedback/stafffeedback.component.css
@@ -311,6 +311,7 @@ text-decoration: none;
     border: 2px solid rgb(255, 255, 255);
     background-color: #ECE7E7; 
     font-weight: bold;
+    text-align: center;
 
 
 
