--- a/src/app/techpage/techpage.component.html
+++ b/src/app/techpage/techpage.component.html
@@ -5,7 +5,7 @@
       <nav class="header" style="height: 85px;">
           <div id="logo-text" >
               <a>
-                  <img src="../../../assets/images/tut.png" alt="SMART FARM" style="float: left;height: 72px;width: 250px; 
+                  <img src="../../../assets/images/tut.png" alt="SMART FARM" style="float: right;height: 72px;width: 250px; 
                   height: 75px;margin-top: 5px;" routerLink="read">
               </a>
           </div>
