--- a/src/app/available-tech/available-tech.component.html
+++ b/src/app/available-tech/available-tech.component.html
@@ -1,1 +1,8 @@
-<p>available-tech works!</p>
+<app-admin-header></app-admin-header>
+
+<body>
+
+    <div class="container2 d-flex justify-content-between ">
+        <app-admin-sidenav></app-admin-sidenav>
+    </div>
+</body>
