--- a/src/app/adminassigntask/adminassigntask.component.html
+++ b/src/app/adminassigntask/adminassigntask.component.html
@@ -23,20 +23,10 @@
         </nav>
     </div>
 </div>
-
-<body>
-
+<body> 
     <div class="container2 d-flex justify-content-between ">
-        <div class="sideNav">
-            <nav class="breadcrumbNav">
-                <ul>
+        <app-admin-sidenav></app-admin-sidenav>
 
-                    <li class="" id="breadcrumbpadding"><a class="" id="hover" routerLink="/adminpage">View Requests</a>
-                    </li>
-                    <li class="breadcrumb-item active" id="breadcrumbpadding"><a class="" disabled>Assign Tasks</a></li>
-                </ul>
-            </nav>
-        </div>
 
         <div class="tab-content ps-3 mt-5" id="myTabContent">
 
@@ -48,8 +38,6 @@
 
                 <div class="departmenCategoryText">
                     <h2>Campus: Soshanguve</h2>
-                    <h4></h4>
-                    <h5></h5>
                 </div>
 
                 <div class="content card mt-4 p-4">
