--- a/src/app/admincloselog/admincloselog.component.html
+++ b/src/app/admincloselog/admincloselog.component.html
@@ -1,101 +1,35 @@
-<div class="container-fluid">
-    <!-- <body class="container"> -->
-        <div class="log d-flex justify-content-end">
-            <nav class="header">
-                <div id="logoDiv">
-                    <a>
-                     
-                        <img class="logo" src="../../../assets/images/tut.png" alt="SMART FARM"
-                            style="float: left;height: 70px;width: 225px;" routerLink="read">
-                    </a>
-                </div>
-                <div id="menu-icon">
-                    <i class="fas fa-bars"></i>
-                </div>
-                <ul>
-                    <li>
-        
-                        <a href="#" class="nav-link active" id="ModalExample" (click)="logout()"><button type="button"
-                                class="btn btn-success">LOGOUT</button></a>
-                    </li>
-                </ul>
-        
-            </nav>
+<app-admin-header></app-admin-header>
+
+<div class="main_content">
+    <div class="body" style="display: flex;">
+        <header>
+            <app-admin-sidenav></app-admin-sidenav>
+        </header>
+        <div class="tab-content m-2 " id="myTabContent">
+            <h1 class="d-flex justify-content-center" style="background-color: rgb(182, 179, 179);">Admin View Progress
+            </h1>
+            <table class="table">
+                <thead class="thead-dark">
+                    <tr>
+                        <th scope="col">Log Ref</th>
+                        <th scope="col">Log Description</th>
+                        <th scope="col">Staff-Feedback</th>
+                        <!-- <th scope="col">Artisan Status</th> -->
+                        <th scope="col">Close</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let data of readData">
+                        <td>{{data.id}}</td>
+                        <td>{{data.description}}</td>
+                        <td>{{data.staff_feedback}}</td>
+                        <!-- <td class="status">{{data.status}}</td> -->
+                        <td><button type="button" class="logbtn " (click)="log($event,data.id)">Log</button> </td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
-</div>
-<body>
-
-    <div class="container2 d-flex justify-content-between ">
-        <div class="sideNav">
-            <nav class="breadcrumbNav">
-                <ul>
-                    <li class = "" id = "breadcrumbpadding"><a class ="" id="hover" href="#" routerLink="/adminpage"  >View Logs</a></li>
-                    <li class="breadcrumb-item active" id="breadcrumbpadding"><a class="" disabled>Close Logs</a></li>
-                    
-                        
-                </ul>
-            </nav>
-        </div>
-
-        <div class="tab-content ps-3 mt-5" id="myTabContent">
-
-              
-                <div class = "contentForm" >
-                   
-                    <div class="departmenCategoryText">
-                        <h2></h2>
-                        <h4></h4>
-                        <h5></h5>
-                    </div>
-                    
-                    <div class="content card mt-4 p-4">
-
-                
-                        <h1 class="d-flex justify-content-center" style="background-color: rgb(182, 179, 179);">Admin Close Logs</h1>
-                        <table class="table">
-                            <thead class="thead-dark">
-                              <tr>
-                                <th scope="col">Log Ref</th>
-                                <th scope="col">Log Description</th>
-                                <th scope="col">Staff-Feedback</th>
-                                <!-- <th scope="col">Artisan Status</th> -->
-                                <th scope="col">Close</th>
-                              </tr>
-                            </thead>
-                            <tbody>
-                              <tr *ngFor="let data of readData">
-                                <td>{{data.id}}</td>
-                                <td>{{data.description}}</td>
-                                <td>{{data.staff_feedback}}</td>
-                                <!-- <td class="status">{{data.status}}</td> -->
-                                <td><button type="button" class="logbtn " (click)="log($event,data.id)">Log</button> </td>
-                              </tr>
-                            </tbody>
-                          </table>
-                        
-                    </div>
-    
-        
-                   
-                </div>
-         
-           
-           
-
-
-
-        </div>
-
     </div>
-    <footer>&copy; 2023 Informatics Community Engagement Project . All Rights Reserved <p></p>
-    </footer> 
-</body>
-
-    
-    
-    
-    
-    
-  
-    
-    
+</div>
+<footer>&copy; 2023 Informatics Community Engagement Project . All Rights Reserved <p></p>
+</footer>
