--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -2,49 +2,6 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
-/* Start of the navigation bar*/
-.header {
-  height: 82px;
-  background: #0c0c0c;
-  width: 100%;
-  margin: 0;
-  position: fixed;
-  font-family: 'Roboto Condensed', sans-serif;
-  font-size: 20px;
-  display: flex;
-  justify-content: space-between;
-  padding: 0 16px 0 0;
-  box-sizing: border-box;
-  z-index: 100;
-}
-
-.header a {
-  padding: 0 32px;
-  color: #eee;
-  transition: 0.4s;
-}
-
-.header a:hover {
-  text-decoration: none;
-  color: red;
-}
-
-.header ul {
-  display: flex;
-  list-style: none;
-  justify-content: space-around;
-  align-items: center;
-  height: 100%;
-  margin: 0;
-}
-
-#logoDiv {
-
-  margin-left: 0.35%;
-  margin-top: 7.2px;
-
-}
-
 .admindashText {
   color: white;
   font-weight: 500;
@@ -390,9 +347,6 @@ footer {
   margin-top: 3.75%;
   width: 100%;
   height: 40px;
-  /* position: absolute; */
-  /* bottom: 0;
-  width: 100%; */
 }
 
 
@@ -596,3 +550,12 @@ footer {
     width: 180px;
   }
 }
+
+.main_content{
+  flex: 1;
+  position: relative;
+}
+.content{
+  flex: 1;
+}
+
