--- a/src/app/techpage/techpage.component.css
+++ b/src/app/techpage/techpage.component.css
@@ -5,37 +5,7 @@ body {
     margin: 10.8%;
   }
   /* Start of the navigation bar*/
-  .header {
-    height: 82px;
-    background: #0c0c0c;
-    width: 100%;
-    margin: 0;
-    position: fixed;
-    font-family: 'Roboto Condensed',sans-serif;
-    font-size: 20px;
-    display: flex;
-    justify-content: space-between;
-    padding:0 16px 0 0;
-    box-sizing: border-box;
-    z-index: 100;
-  }
-  .header a {
-    padding: 0 32px;
-    color: #eee;
-    transition: 0.4s;
-  }
-  .header a:hover {
-    text-decoration: none;
-    color: red;
-  }
-  .header ul {
-    display: flex;
-    list-style: none;
-    justify-content: space-around;
-    align-items: center;
-    height: 100%;
-    margin: 0;
-  }
+  
   #logoDiv{
   
     margin-left: 1%;
@@ -58,10 +28,8 @@ body {
   /* Start of  Everything on the side nav*/
   .sideNav {
     float: left;
-   
     box-shadow: 5px 0 2px #969292;
     width: 335px;
-    height: 1055px;
     
   }
   .breadcrumbNav {
@@ -146,75 +114,41 @@ body {
       width: 100%; */
     }
     
-    
-    
-    /*Navigation*/
-  /*   
-    nav {
-      height: 72px;
-      background: #0c0c0c;
+ 
+
+
+    #customers {
+      font-family: Arial, Helvetica, sans-serif;
+      border-collapse: collapse;
       width: 100%;
-      margin: 0;
-      position: fixed;
-      font-family: 'Roboto Condensed',sans-serif;
-      font-size: 20px;
-      display: flex;
-      justify-content: space-between;
-      padding:0 16px 0 0;
-      box-sizing: border-box;
-      z-index: 100;
     }
     
-    nav a {
-      padding: 0 32px;
-      color: #eee;
-      transition: 0.4s;
+    #customers td,
+    #customers th {
+      border: 1px solid #ddd;
+      padding: 8px;
     }
     
-    nav a:hover {
-      text-decoration: none;
-      color: red;
+    #customers tr:nth-child(even) {
+      background-color: #f2f2f2;
     }
     
-    nav ul {
-      display: flex;
-      list-style: none;
-      justify-content: space-around;
-      align-items: center;
-      height: 100%;
-      margin: 0;
+    #customers tr:hover {
+      background-color: #ddd;
     }
     
-    .active {
-      color:#0e0d0d;
-    } */
-  .table {
-      width: 90%;
-      margin: auto auto;
-    }
-  select#Cater,input.form-control {
-      width: 100%;
-      padding: 0 0;
-      border-radius: 0.25rem;
-    }
-  .content{
-    border: 1px solid #ccc;
-    overflow-y: scroll;
-    height: auto; 
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2);
-    padding: 20px;
-    width: 85%;
-    margin: auto auto;
-  }
-  
-  .btnAvailableTech{
-      background: black;
+    #customers th {
+      padding-top: 12px;
+      padding-bottom: 12px;
+      text-align: left;
+      background-color: grey;
       color: white;
-      width: 120px;
-      height: 30px;
-      border-radius: 5px;
-      text-align: center;
-  
-  
     }
-  
+
+    .save_btn{
+      background-color: rgba(128, 128, 128, 0.363);
+      border-radius: 8px;
+    }
+    .save_btn:hover{
+      width: 50px;
+    }
