--- a/src/app/track-request/track-request.component.css
+++ b/src/app/track-request/track-request.component.css
@@ -2,53 +2,8 @@
   margin: 3.47%;
 }
 
-
-
-/* Start of the navigation bar*/
-.header {
-  height: 82px;
-  background: #0c0c0c;
-  width: 100%;
-  margin: 0;
-  position: fixed;
-  font-family: 'Roboto Condensed', sans-serif;
-  font-size: 20px;
+#content{
   display: flex;
-  justify-content: space-between;
-  padding: 0 16px 0 0;
-  box-sizing: border-box;
-  z-index: 100;
-}
-
-.header a {
-  padding: 0 32px;
-  color: #eee;
-  transition: 0.4s;
-}
-
-.header a:hover {
-  text-decoration: none;
-  color: red;
-}
-
-.header ul {
-  display: flex;
-  list-style: none;
-  justify-content: space-around;
-  align-items: center;
-  height: 100%;
-  margin: 0;
-}
-
-body{
-  flex: 1;
-}
-
-#logoDiv {
-
-  margin-left: 1%;
-  margin-top: 7.2px;
-
 }
 
 /*logout button*/
@@ -65,51 +20,8 @@ body{
 }
 
 /* End of the navigation bar*/
-/* Start of  Everything on the side nav*/
-.sideNav {
-  float: left;
 
-  box-shadow: 5px 0 2px #969292;
-  width: 335px;
-  height: 1055px;
 
-}
-
-.breadcrumbNav {
-  margin: 12% 10px;
-  padding: 20px 30px;
-}
-
-#breadcrumbpadding {
-
-  width: 120px;
-  padding: 6px 0;
-}
-
-a {
-  padding-top: 20px;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 20px;
-  /* identical to box height */
-  letter-spacing: 0.035em;
-  text-transform: capitalize;
-  color: #005596;
-  text-decoration: none;
-}
-
-.breadcrumbNav ul {
-  list-style: none;
-  flex-direction: column;
-}
-
-.breadcrumb-item.active {
-  border-bottom: 3px solid #005596;
-  width: 115px;
-}
-
-/* End of Everything on the side nav*/
 
 /*Disable the active link*/
 a:disabled,
@@ -172,33 +84,6 @@ footer {
 
 
 
-
-
-#table {
-  width: 90%;
-  margin: auto auto;
-
-}
-
-form {
-
-  width: 600px;
-
-  height: 600px;
-
-  /*Note that the background form is not visible behind, nut it is there*/
-}
-
-
-
-.container {
-
-  margin: 2% auto;
-  width: 1050px;
-  text-align: center;
-
-}
-
 .middleTable {
 
   border: 1px solid black;
@@ -209,32 +94,17 @@ form {
   background-color: rgb(255, 254, 254);
   box-shadow: 0px 2px 6px black;
   border-radius: 10px;
-  overflow-y: scroll;
-  width: 850px;
-  height: 500px;
-  margin: auto 17.5%;
-}
 
-.middleTableDivTextMargin {
-  margin: 1%;
-
-}
-
-.tracklist {
-  overflow-y: scroll;
-  height: 50%;
 }
 
 label {
   display: inline-block;
-  margin: 0 60px 8px;
+  margin: 8px;
   padding: 5px 15px;
   cursor: pointer;
   color: white;
   border-radius: 10px;
   font-weight: 500;
-
-
 }
 
 .todo {
@@ -290,4 +160,23 @@ label {
   color: green;
   background-color: white;
 
+}
+
+.left-content{
+  width: 30%;
+  margin: 2px;
+}
+.right-content{
+width: 70%;
+margin: 2px;
+}
+
+.right-content p {
+  margin: 8px;
+  border-radius: 10px;
+  font-weight: 500;
+}
+
+.btn-secondary{
+  margin: 8px;
 }
