--- a/src/app/adminpage/adminpage.component.html
+++ b/src/app/adminpage/adminpage.component.html
@@ -35,11 +35,11 @@
 <div class="container2 d-flex justify-content-between ">
     <ul class="nav nav-tabs flex-column justify-content-center" id="myTab" role="tablist">
 
-        <li class="nav-item" role="presentation" id="doing-tab1"  routerLink="/trackrequest">
+        <!-- <li class="nav-item" role="presentation" id="doing-tab1"  routerLink="/trackrequest">
             <a class="nav-link active colorRed" id="doing-tab"  type="text"
                 role="tab" aria-controls="doing" aria-selected="true">
                <br><a><b>REQUESTS</b></a></a>
-        </li>
+        </li> -->
         <li class="nav-item" role="presentation">
             <a class="nav-link colorAmber" id="done-tab" data-bs-toggle="tab" type="text" role="tab" aria-selected="false"
                 routerLink="/adminprogress"><br><a><b>VIEW PROGRESS</b></a></a>
@@ -60,6 +60,12 @@
         <li class="nav-item" role="presentation">
             <a class="nav-link colorAmber" data-bs-toggle="tab" type="text" role="tab" aria-selected="false"
                 routerLink="/technician-table"><br><a><b>TABLE</b></a></a>
+
+        </li>
+
+        <li class="nav-item" role="presentation">
+            <a class="nav-link colorAmber" data-bs-toggle="tab" type="text" role="tab" aria-selected="false"
+                routerLink="/newArtisan"><br><a><b>CREATE ARTISAN</b></a></a>
 
         </li>
 
