--- a/src/app/techpage/techpage.component.css
+++ b/src/app/techpage/techpage.component.css
@@ -453,9 +453,10 @@ a {
   .chart11 {
     background: #fff;
     padding: 20px;
+    margin-right: 50px;
     border-radius: 10px;
     box-shadow: 0 7px 25px rgba(0, 0, 0, 0.8);
-    width: 90%;
+    width: 100%;
     display: flex;
     flex-direction: column;
   }
