admin progress update

--- a/src/app/adminprogress/adminprogress.component.html
+++ b/src/app/adminprogress/adminprogress.component.html
@@ -1,8 +1,32 @@
+<div class="log d-flex justify-content-end">
+  <nav class="header" style="height: 85px;">
+      <div id="logo-text" >
+          <a>
+              <img class="logo" src="../../../assets/images/tut.png" alt="SMART FARM"
+              style="float: right;height: 70px;width: 225px;" routerLink="read" />
+          </a>
+      </div>
+      <div id="menu-icon">
+          <i class="fas fa-bars"></i>
+      </div>
 
+      <ul>
+          <li>
+            
+              <a routerLink="/adminpage" class="nav-link active" id="ModalExample" ><button type="button" class="btn btn-success">EXIT REPORT</button></a>
+            </li>
+          </ul>
+      
+
+  </nav>
+</div>
+      <br>
+      <br>
+      <br>
 
   <div class="container2 d-flex justify-content-between ">
 
-      <div class="tab-content  ps-3 mt-5" id="myTabContent">
+      <div class="tab-content  ps-3 mt-5 " id="myTabContent">
 
               <div class = "contentForm" >
                  
@@ -112,6 +136,13 @@
       </div>
 
   </div>
+  <div>
+    <br>
+    <br>
+<footer>&copy; 2023 Informatics Community Engagement Project . All Rights Reserved <p></p>
+</footer> 
+</div>
+
 
 
 
