--- a/src/app/adminprogress/adminprogress.component.css
+++ b/src/app/adminprogress/adminprogress.component.css
@@ -495,6 +495,7 @@
     .chart2 {
       background: #fff;
       padding: 20px;
+      margin-left: 120px;
       border-radius: 5px;
       box-shadow: 0 7px 25px rgba(175, 173, 173, 0.8);
       width: 95%;
