--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -33,7 +33,7 @@
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="exampleModalLongTitle"><img src="../../assets/icons/icons8-alert.gif"/>  New Request Alert</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <button type="button" class="close" data-dismiss="modal" (click)="closeAdminModal() " aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
@@ -44,7 +44,7 @@
         </div>
         <div class="modal-footer" >
           <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> -->
-          <button type="button" class="btn btn-primary" (click)="closeAdminModal()" >OK</button>
+          <button type="button" class="btn btn-primary" (click)="closeAdminModal()"  routerLink="/adminpage" >OK</button>
         </div>
       </div>
     </div>
