--- a/src/app/techpage/techpage.component.html
+++ b/src/app/techpage/techpage.component.html
@@ -9,10 +9,11 @@
           </button>
         </div>
         <div class="modal-body"  class="alert alert-success" role="alert">
-            	<h3 >id:{{id}} </h3>
-				<h3 >description:{{description}} </h3>
-				<h3 >expected_date:{{expected_date}} </h3>
-        <h3 >priority:{{priority}} </h3>
+            	<!-- <h3 >Staff Id :{{id}} </h3> -->
+				<h3 >Description :{{description}} </h3>
+				<h3 >expected Date :{{expected_date}} </h3>
+        <h3 >Priority :{{priority}} </h3>
+        <h3 >Assigned Date :{{assigned_date}} </h3>
         </div>
         <div class="modal-footer" >
           <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> -->
