--- a/src/app/report/report.component.html
+++ b/src/app/report/report.component.html
@@ -116,10 +116,10 @@
             <td mat-cell *matCellDef="let element"> {{element.staff_feedback}} </td>
         </ng-container>
 
-        <ng-container matColumnDef="tech_feedback">
+        <!-- <ng-container matColumnDef="tech_feedback">
             <th mat-header-cell mat-sort-header *matHeaderCellDef> Tech Feedback </th>
             <td mat-cell *matCellDef="let element"> {{element.tech_feedback}} </td>
-        </ng-container>
+        </ng-container> -->
 
         <ng-container matColumnDef="status">
             <th mat-header-cell mat-sort-header *matHeaderCellDef> Task Status </th>
