--- a/src/app/hodcloselogs/hodcloselogs.component.html
+++ b/src/app/hodcloselogs/hodcloselogs.component.html
@@ -59,7 +59,7 @@
                                 <th scope="col">Staff Name</th>
                                 <th scope="col">Staff-Feedback</th>
                                 <th scope="col">Artisan Status</th>
-                                <th scope="col">Close</th>
+                                <!-- <th scope="col">Close</th> -->
                               </tr>
                             </thead>
                             <tbody>
@@ -68,7 +68,7 @@
                                 <td>{{data.description}}</td>
                                 <td>{{data.staff_feedback}}</td>
                                 <td class="status">{{data.status}}</td>
-                                <td><button type="button" class="logbtn " (click)="log($event,data.id)" [(ngModel)]="data.status">Log</button> </td>
+                                <!-- <td><button type="button" class="logbtn " (click)="log($event,data.id)" [(ngModel)]="data.status">Log</button> </td> -->
                               </tr>
                             </tbody>
                           </table>
