--- a/src/app/admin-sidenav/admin-sidenav.component.html
+++ b/src/app/admin-sidenav/admin-sidenav.component.html
@@ -1,11 +1,11 @@
 <div class="sideNav">
     <nav class="breadcrumbNav">
         <ul>
-            <li class="" id="breadcrumbpadding"><a class="" id="hover" href="#" routerLink="/dash2">Dashboard</a></li>
-            <li class="" id="breadcrumbpadding"><a class="" id="hover" href="#" routerLink="/adminpage">View Logs</a></li>
-            <li class="" id="breadcrumbpadding"><a class="" id="hover" href="#" routerLink="/adminprogress">View Progress</a></li>
-            <li class="" id="breadcrumbpadding"><a class="" id="hover" href="#" routerLink="/admincloselog">Close Logs</a></li>
-            <li class="" id="breadcrumbpaddingreport"><a class="" id="hover" href="#" routerLink="/generatereport">Generate Report</a></li>
+            <li class="" id="breadcrumbpadding"><a class="anchorBorder" id="hover" routerLink="/dash2">Dashboard</a></li>
+            <li class="" id="breadcrumbpadding"><a class="anchorBorder" id="hover" routerLink="/adminpage">View Logs</a></li>
+            <li class="" id="breadcrumbpadding"><a class="anchorBorder" id="hover" routerLink="/adminprogress">View Progress</a></li>
+            <li class="" id="breadcrumbpadding"><a class="anchorBorder" id="hover" routerLink="/admincloselog">Close Logs</a></li>
+            <!-- <li class="" id="breadcrumbpadding"><a class="anchorBorder" id="hover" routerLink="/generatereport">Generate Report</a></li> -->
         </ul>
     </nav>
 </div>
