--- a/src/app/admincloselog/admincloselog.component.html
+++ b/src/app/admincloselog/admincloselog.component.html
@@ -24,7 +24,7 @@
                         <td>{{data.description}}</td>
                         <td>{{data.staff_feedback}}</td>
                         <!-- <td class="status">{{data.status}}</td> -->
-                        <td><button type="button" class="logbtn " (click)="log($event,data.id)">Log</button> </td>
+                        <td><button type="button" class="logbtn " (click)="log($event,data.id)">Close</button> </td>
                     </tr>
                 </tbody>
             </table>
