--- a/src/app/hodpage/hodpage.component.html
+++ b/src/app/hodpage/hodpage.component.html
@@ -1,3 +1,5 @@
+<app-admin-header></app-admin-header>
+
 <div class="tab-content ps-5" id="myTabContent">
     <div class="tab-pane fade show active" id="doing" role="tabpanel" aria-labelledby="doing-tab">
 
